test/kubernetes/e2e/features/agentgateway/local-rate-limit/testdata/common.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: kgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: svc-route
spec:
  parentRefs:
  - name: gw
  rules:
  - name: rule0
    backendRefs:
    - name: simple-svc
      port: 8080
