test/kubernetes/e2e/features/agentgateway/local-rate-limit/testdata/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-svc
  labels:
    app: simple-svc
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 3000
  selector:
    app.kubernetes.io/name: backend-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: backend-test
      version: v1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backend-test
        version: v1
    spec:
      terminationGracePeriodSeconds: 0
      containers:
        - image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          name: backend-test
          ports:
            - containerPort: 3000
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: simple-svc
